--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,167 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin:0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.main_div{
+  width:100%;
+  height:100vh;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  background: #6983aa;
+  align-items: center;
+  text-align: center;
+}
+.div_center{
+  width:25%;
+  height:80vh;
+  background-color:#f4f4f4 ;
+  box-shadow: 5px 5px 25px -5px rgba(0,0,0.5);
+  border-radius: 15px;
+  overflow-y: auto; 
+}
+h1{
+  color:honeydew;
+  background-color: blue;
+}
+input{
+  text-align: center;
+  height: 30px;
+  border-radius:4px;
+  font-weight: 500;
+  font-size: 20px;
+  border-bottom: 2px #8566aa;
+  border-bottom-color: black;
+}
+ button{
+  min-height: 5px;
+  width:30px;
+  border-radius: 10%;
+  border-color: transparent;
+  color:#fff;
+  font-size: 25px;
+  margin-left: 10px;
+  background-color: #8566aa;
+  border: none;
+  outline: none;
+
+} 
+ button:hover{
+background-color: green;
+} 
+.item-list {
+  max-height: 60vh; 
+  padding: 10px; 
+  list-style-type: none; 
+  margin: 0; 
+  overflow-y: auto; 
+}
+
+.item-list::-webkit-scrollbar {
+  width: 5px;
+}
+
+.item-list::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+.item-list::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px; 
+}
+ol{
+  margin-top: 20px;;
+}
+ol li{
+  padding-left: 0cap;
+  font-weight: 500;
+  font-size: 20px;
+  color: #8566aa;
+  text-align: left;
+  display: flex;
+  min-height: 40px;
+  align-items: center;
+  text-transform: capitalize;
+  
+}
+
+ .btn{
+  background-color: red;
+  width: 40px;
+  min-height: 10px;
+}
+.btn:hover{
+  background-color: red;
+} 
+todo_list.fa-times{
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  background-color: #6983aa;
+  border-radius: 50%;
+  margin: 0 15px 0 35px;
+  color:aliceblue;
+  box-shadow: 5px 5px 15px -5px rgba(0,0,0.5);
+}
+
+.todo-list-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: rgba(0, 0, 255, 0.346);
+}
+
+.todo-list {
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 300px;
+  background-color:#f4f4f4 ;
+}
+
+.input-container {
+  margin-bottom: 15px;
+}
+
+input {
+  padding: 8px;
+}
+
+.btn {
+  margin-top: 5px;
+}
+
+.list-group-item {
+  margin-top: 5px;
+}
+
+.list-group-item button {
+  margin-left: 10px;
+}
+.text-center {
+background: #8566aa;
+color: white;
+}
+
+
+@media only screen and (max-width: 500px) {
+  .main_div {
+    align-items: flex-start; /* Align items to the top for smaller screens */
+  }
+  
+  .div_center {
+    width: 90%; /* Adjust width for smaller screens */
+    max-height: 70vh; /* Reduce maximum height for smaller screens */
+    margin-top: 80px;
+  }
+}
+
